--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.11.2",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
+    "tailwindcss-filters": "^3.0.0",
     "three": "^0.152.2"
   },
   "devDependencies": {
