--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-tilt": "^1.0.2",
+    "react-toggle-dark-mode": "^1.1.1",
     "react-vertical-timeline-component": "^3.6.0",
     "tailwindcss-filters": "^3.0.0",
     "three": "^0.152.2"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
